--- a/stheader.css
+++ b/stheader.css
@@ -77,8 +77,9 @@ header div#menu, div#menuescondido{
     header div#menu{
         display: block;
         text-align: center;
-        height: 40px;
-        background-color: rgba(37, 61, 61, 0.438);
+        height: 35px;
+        margin-top: 5px;
+        background-color: rgb(42, 72, 72);
     }
     header div#menu img{
         margin-top: 5px;
@@ -89,8 +90,10 @@ header div#menu, div#menuescondido{
         width: 100%;
         height: 200px;
         position: absolute;
-        background-color: rgb(37, 61, 61);
-        z-index: 1;
+        background-color: rgb(47, 66, 66);
+        padding-bottom: 10px;
+        padding-top: 10px;
+        box-shadow: 0px 30px 40px 2px rgba(0, 0, 0, 0.61);
     }
     div#menuescondido nav{
         position: absolute;
@@ -116,7 +119,7 @@ header div#menu, div#menuescondido{
         line-height: 50px;
         width: 100vw;
         border-radius: 30px;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.2s ease-in-out;
         
     }
     div#menuescondido nav a:hover{
