--- a/styleconteudo.css
+++ b/styleconteudo.css
@@ -6,18 +6,23 @@ body{
     background-image: url(star-bg.svg);
     background-color: rgb(37, 61, 61);
     background-attachment: scroll;
-    background-size: contain;
+    background-size: cover;
 }
 
 main{
     width: 75vw;
     background-color: rgb(231, 231, 231);
-    margin: auto;
+    left: 50%;
+    transform: translateX(-50%);
     padding: 20px 20px 10px 20px;
     border-radius: 0px 0px 20px 20px;
     margin-bottom: 5vh;
     box-shadow: 0px 1px 9px 7px rgba(0, 0, 0, 0.274);
     text-align: center;
+    animation-duration: 1s;
+    position: absolute;
+    animation-name: slidein;
+    z-index: -1;
 }
 
 main h1{
@@ -42,7 +47,7 @@ main p, li{
 button{
     font-family: 'Quicksand';
     font-weight: 400;
-    color: aliceblue;
+    color: white;
     background-color: rgb(37, 61, 61);
     text-decoration: none;
     font-size: 115%;
@@ -52,8 +57,8 @@ button{
 }
 
 button:hover{
-    color: white;
-    box-shadow: inset 150px 0px 0px 0px rgb(23, 38, 38);
+    color: black;
+    box-shadow: inset 200px 0px 0px 0px aliceblue;
 }
 
 h2{
@@ -65,4 +70,10 @@ h2{
 li{
     text-align: left;
     font-size: 1.3em;
+}
+
+@keyframes slidein{
+    from{
+        margin-top: -100vh;
+    }
 }
